prevent hairline gap appearing between modal footer and notch

--- a/rca/static_src/sass/components/_modal.scss
+++ b/rca/static_src/sass/components/_modal.scss
@@ -129,6 +129,7 @@
     }
 
     &__footer {
+        position: relative;
         background-color: $color--white;
         color: $color--black;
         padding: $gutter;
